samples/_failures_safe/1761417949_dd3e35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99a4bc6b.c: In function ‘main’:
./samples/SAFE/__tmp_99a4bc6b.c:161:1: error: expected declaration or statement at end of input
  161 | int main() {
      | ^~~
